src/objects/Enrollment_Comments__c.object
<CustomObject>
    <customHelpPage>INC_HelpRedirect</customHelpPage>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalID__c</fullName>
        <description>This is the id of the approval process record that created it.  Used in the trigger to make sure we don&apos;t duplicate comments.</description>
        <label>ApprovalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_1_Email__c</fullName>
        <label>Approver 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_2_Email__c</fullName>
        <label>Approver 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_3_Email__c</fullName>
        <label>Approver 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be filled in for the person who created the approver comments.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentApplication__c</fullName>
        <label>Enrollment Application</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Enrollment Comments</relationshipLabel>
        <relationshipName>Enrollment_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Final_Rejection__c</fullName>
        <formula>if(and(ispickval(IsRejection__c,&quot;Yes&quot;),

and(
not(ispickval(Reason_Codes__c,&quot;More Suitable for T&amp;M Plan&quot;)),
not(ispickval(Reason_Codes__c,&quot;More Suitable for FP Plan&quot;)),
not(ispickval(Reason_Codes__c,&quot;Other&quot;)),
not(ispickval(Reason_Codes__c,&quot;Rejected For Corrections (explain in comments)&quot;)))),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRejection__c</fullName>
        <description>Hidden system field set by code to Yes if record created by rejection process</description>
        <inlineHelpText>This field must be displayed for the purposes of the workflow.  No entry required.</inlineHelpText>
        <label>IsRejection</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Codes__c</fullName>
        <description>When rejection is required, use the dropdown list to select from the most commonly noted reasons. Comments must be logged with each rejection for the reference of the original submitter, prior approvers, and DTW Admin. If corrections to the application</description>
        <inlineHelpText>When rejection is required, use the dropdown list to select from the most commonly noted reasons. Comments must be logged with each rejection for the reference of the original submitter, prior approvers, and DTW Admin. If corrections to the application</inlineHelpText>
        <label>Reason Codes</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Poor Project Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project in Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Nearing Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Suitable for T&amp;M Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Suitable for FP Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project is Intercompany – Client is AECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected For Corrections (explain in comments)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TM1CommentsKey__c</fullName>
        <externalId>true</externalId>
        <label>TM1 Comments Key</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Comment Type</label>
        <picklist>
            <controllingField>IsRejection__c</controllingField>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection for Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Enrollment Comment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>EC-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Comments</pluralLabel>
    <recordTypes>
        <fullName>Fixed_Plan</fullName>
        <active>true</active>
        <label>Fixed Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_and_Material</fullName>
        <active>true</active>
        <label>Time and Material</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Comment_Cannot_be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>Comments__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Comments can not be empty, please enter details.</errorMessage>
    </validationRules>
</CustomObject>